--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-ca">
+<html>
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="This page to get the temperature" />
